--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -16,3 +16,27 @@
 .flexCenter {
   @apply flex justify-center items-center;
 }
+
+/* 滚动条样式 */
+.app::-webkit-scrollbar {
+  width: 4px; /*  设置纵轴（y轴）轴滚动条 */
+  height: 4px; /*  设置横轴（x轴）轴滚动条 */
+}
+/* 滚动条滑块（里面小方块） */
+.app::-webkit-scrollbar-thumb {
+  border-radius: 0px;
+  background: transparent;
+}
+/* 滚动条轨道 */
+.app::-webkit-scrollbar-track {
+  border-radius: 0;
+  background: transparent;
+}
+
+/* hover时显色 */
+.app:hover::-webkit-scrollbar-thumb {
+  background: rgba(0,0,0,0.2);
+}
+/* .app:hover::-webkit-scrollbar-track {
+  background: rgba(0,0,0,0.1);
+} */
